...
    onLimpiarMensaje: () -> Unit,
    onLogoutClick: () -> Unit
) {
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Catálogo de Equipos") },
                actions = {
                    TextButton(onClick = onLogoutClick) {
                        Text("Salir", color = Color.Red)
                    }
                }
            )
...
